--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
 
                 <div class="item breakfast" data-price="16">
-                    <img src="/img/avocado.jpg">
+                    <img src="../img/avocado.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Avocado Toast</h4>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="item lunch" data-price="12">
-                    <img src="/img/burger.jpg">
+                    <img src="../img/burger.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Big Burger</h4>
@@ -86,7 +86,7 @@
                 </div>
 
                <div class="item drink">
-                    <img src="/img/gentleman.jpg">
+                    <img src="../img/gentleman.jpg">
                     <div class="item-info">
                         <header>
                         <h4>The Gentleman</h4>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="item drink">
-                    <img src="/img/marg.jpg">
+                    <img src="../img/marg.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Silly Margarita</h4>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="item drink">
-                    <img src="/img/mojito.jpg">
+                    <img src="../img/mojito.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Clean Mojito</h4>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="item drink">
-                    <img src="/img/old.jpg">
+                    <img src="../img/old.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Old Fashioned</h4>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="item breakfast">
-                    <img src="/img/om.jpg">
+                    <img src="../img/om.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Cheddar Omelette</h4>
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="item breakfast">
-                    <img src="/img/pancakes.jpg">
+                    <img src="../img/pancakes.jpg">
                     <div class="item-info">
                         <header>
                         <h4>The Stacked Pancake</h4>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div class="item dinner">
-                    <img src="/img/pasta.jpg">
+                    <img src="../img/pasta.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Meat Pasta</h4>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="item dinner">
-                    <img src="/img/pizza.jpg">
+                    <img src="../img/pizza.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Spinach Pizza</h4>
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="item lunch">
-                    <img src="/img/salad.jpg">
+                    <img src="../img/salad.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Salad</h4>
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="item dinner">
-                    <img src="/img/salmon.jpg">
+                    <img src="../img/salmon.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Atlantic Salmon</h4>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="item lunch">
-                    <img src="/img/sandwhich.jpg">
+                    <img src="../img/sandwhich.jpg">
                     <div class="item-info">
                         <header>
                         <h4>BLT Sandwhich</h4>
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div class="item dinner">
-                    <img src="/img/steak.jpg">
+                    <img src="../img/steak.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Steak Filet</h4>
@@ -340,7 +340,7 @@
                     </div>
                 </div>
                 <div class="item breakfast">
-                    <img src="/img/waffle.jpg">
+                    <img src="../img/waffle.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Strawberry Waffle</h4>
@@ -362,7 +362,7 @@
                     </div>
                 </div>
                 <div class="item lunch">
-                    <img src="/img/wrap.jpg">
+                    <img src="../img/wrap.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Thai Chicken Wrap</h4>
