--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
 
                 <div class="item breakfast" data-price="16">
-                    <img src="../img/avocado.jpg">
+                    <img src="img/avocado.jpg">
                     <div class="item-info">
                         <header>
                         <h4>Avocado Toast</h4>
